...
          style: TextStyle(color: Colors.white),
        )),
        actions: [
          ToggleButton(isDarkMode: isDarkMode, toggleTheme: toggleTheme),
        ],
        leading: IconButton(
          key: const Key("loginfromadmin"),
          icon: Icon(Icons.arrow_back),
          onPressed: () {
            GoRouter.of(context).replaceNamed("login");
          },
        ),
      ),
...
                    Text(
                      'Add Table',
                      style: Theme.of(context).textTheme.headline6,
                      textAlign: TextAlign.center,
                    ),
                    TextFormField(
                      key: const Key("add1"),
                      controller: tableNum1,
                      decoration:
                          const InputDecoration(labelText: 'Table Number'),
                    ),
                    TextFormField(
                      key: const Key("add2"),
                      controller: num_of_people1,
                      decoration:
                          const InputDecoration(labelText: 'Number of Seats'),
                    ),
                    TextFormField(
                      key: const Key("add3"),
                      controller: floorNum1,
                      decoration:
                          const InputDecoration(labelText: 'Floor Number'),
                    ),
                    TextFormField(
                      key: const Key("add4"),
                      controller: type1,
                      decoration: const InputDecoration(labelText: 'Type'),
                    ),
                    const SizedBox(height: 16),
                    Center(
                      child: ElevatedButton(
                        key: const Key("addbtn"),
                        onPressed: () async {
                          final String seats = num_of_people1.text;
                          final String floor = floorNum1.text;

                          final String typem = type1.text;

...
                    Text(
                      'Get Single Table',
                      style: Theme.of(context).textTheme.headline6,
                      textAlign: TextAlign.center,
                    ),
                    TextFormField(
                      key: const Key("get"),
                      controller: tableNum2,
                      decoration:
                          const InputDecoration(labelText: 'Table Number'),
                    ),
                    const SizedBox(height: 16),
                    Center(
                      child: ElevatedButton(
                        key: const Key("getbtn"),
                        onPressed: () async {
                          final String tableNumber = tableNum2.text;

                          await ref
                              .read(tableStateProvider.notifier)
                              .table(ref, "", "", "", tableNumber, "read");
...
                                  ),
                                  actions: [
                                    TextButton(
                                      onPressed: () {
                                        Navigator.of(context).pop();
                                      },
                                      child: Text('Close'),
                                    ),
                                  ],
                                );
                              },
                            );
                          }
...
                    Text(
                      'Update Tables',
                      style: Theme.of(context).textTheme.headline6,
                      textAlign: TextAlign.center,
                    ),
                    TextFormField(
                      key: const Key("update1"),
                      controller: tableNum3,
                      decoration:
                          const InputDecoration(labelText: 'Table Number'),
                    ),
                    TextFormField(
                      key: const Key("update2"),
                      controller: num_of_people3,
                      decoration:
                          const InputDecoration(labelText: 'Number of Seats'),
                    ),
                    TextFormField(
                      key: const Key("update3"),
                      controller: floorNum3,
                      decoration:
                          const InputDecoration(labelText: 'Floor Number'),
                    ),
                    TextFormField(
                      key: const Key("update4"),
                      controller: type3,
                      decoration: const InputDecoration(labelText: 'Type'),
                    ),
                    const SizedBox(height: 16),
                    Center(
                      child: ElevatedButton(
                        key: const Key("updatebtn"),
                        onPressed: () async {
                          final String seats = num_of_people3.text;
                          final String floor = floorNum3.text;

                          final String typem = type3.text;

...
                    Text(
                      'Delete Table',
                      style: Theme.of(context).textTheme.headline6,
                      textAlign: TextAlign.center,
                    ),
                    TextFormField(
                      key: const Key("delete"),
                      controller: tableNum4,
                      decoration: const InputDecoration(
                          labelText: 'Table Number to Delete'),
                    ),
                    const SizedBox(height: 16),
                    Center(
                      child: ElevatedButton(
                        key: const Key("deletebtn"),
                        onPressed: () async {
                          final String tableNumber = tableNum4.text;

                          await ref
                              .read(tableStateProvider.notifier)
                              .table(ref, "", "", "", tableNumber, "delete");
...
