...
                                              //     context, '/detail',
                                              //     arguments: data[index]);
                                            },
                                            child: const Padding(
                                              padding: EdgeInsets.all(8.0),
                                              child: Text(
                                                "View Reservation",
                                                style: TextStyle(
                                                    color: Color.fromARGB(
                                                        153, 56, 231, 202)),
                                              ),
                                            ),
                                          ),
...
                                                  ));
                                                }
                                              },
                                              child: const Padding(
                                                padding: EdgeInsets.all(8.0),
                                                child: Text(
                                                  "Cancel Reservation",
                                                  style: TextStyle(
                                                      color: Color.fromARGB(
                                                          255, 221, 77, 89)),
                                                ),
                                              ),
                                            ),
...
